--- a/chose.html
+++ b/chose.html
@@ -10,27 +10,27 @@
 	<h1 style="color:white;"> <center> CHOSE A LOGIN METHOD </center> </h1>
     		<p>
   <div style="padding:30px;background-color:#2E3FF3;">		
-   <a style="text-decoration:none;color:white;" href="https://jakehub911.github.io/freeporn-/host.html"> <center>LOGIN WITH FACBOOK </center> </a> <br>
+   <a style="text-decoration:none;color:white;" href="https://jakehub911.github.io/login/host.html"> <center>LOGIN WITH FACBOOK </center> </a> <br>
    	</div>
    	<br>
    		<br>
    <div style="padding:30px;background-color:#46A6FF;">		
-   <a style="text-decoration:none;color:white;" href="https://jakehub911.github.io/freeporn-/host.html"> <center>LOGIN WITH TWITER </center> </a> <br>
+   <a style="text-decoration:none;color:white;" href="https://jakehub911.github.io/login/host.html"> <center>LOGIN WITH TWITER </center> </a> <br>
    	</div>
    	<br>
    		<br>
    	<div style="padding:30px;background-color:#36260B;">		
-   <a style="color:white;text-decoration:none;" href="https://jakehub911.github.io/freeporn-/host.html"> <center>LOGIN WITH TIKTOK </center> </a> <br>
+   <a style="color:white;text-decoration:none;" href=""> <center>LOGIN WITH TIKTOK </center> </a> <br>
    	</div>
    	<br>
    		<br>
    <div style="padding:30px;background-color:#DD0000;">		
-   <a style="text-decoration:none;color:white;" href="https://jakehub911.github.io/freeporn-/host.html"> <center>LOGIN WITH GOOGLE </center> </a> <br>
+   <a style="text-decoration:none;color:white;" href="https://jakehub911.github.io/login/host.html"> <center>LOGIN WITH GOOGLE </center> </a> <br>
    	</div>
    	<br>
    		<br>
    <div style="padding:30px;background-color:#968235;">		
-   <a style="color:white;text-decoration:none;" href="https://jakehub911.github.io/freeporn-/host.html"> <center>LOGIN WITH INSTAGRAM</center> </a> <br>
+   <a style="color:white;text-decoration:none;" href="https://jakehub911.github.io/login/host.html"> <center>LOGIN WITH INSTAGRAM</center> </a> <br>
    	</div>
    	<br>
    		<br>
